# sshcerts

./: Cargo.toml  LICENSE  README  README.md  index.md
.github/workflows/: rust.yml
benches/: certs-per-second.rs  certs_per_second.rs
examples/: fido-provision.rs  into-ssh-pubkey.rs  new-fido-sshkey.rs  parse-ssh-signature.rs  sign-cert-with-file.rs  sign-cert-with-yubikey.rs  sign-file-with-file.rs  sign-with-file.rs  sign-with-yubikey.rs  ssh-cert-info.rs  ssh-pkey-info.rs  ssh-pubkey-from-cert.rs  ssh-pubkey-info.rs  yk-fingerprint.rs  yk-generate-csr.rs  yk-provision.rs
src/: cert.rs  error.rs  keytype.rs  lib.rs  pubkey.rs  reader.rs  utils.rs  writer.rs
src/fido/: generate.rs  mod.rs  parsing.rs  signing.rs  verification.rs
src/fido/generate/: ctap2_hid.rs  mod.rs  mozilla.rs
src/fido/signing/: ctap2_hid.rs  mod.rs  mozilla.rs
src/fido/utils/: ctap2_hid.rs  mod.rs  mozilla.rs
src/ssh/: allowed_signer.rs  cert.rs  error.rs  keytype.rs  mod.rs  privkey.rs  pubkey.rs  reader.rs  signature.rs  signer.rs  utils.rs  writer.rs
src/x509/: mod.rs
src/yubikey/: management.rs  mod.rs  ssh.rs  verification.rs  yubikey.rs
src/yubikey/fido/: management.rs  mod.rs
src/yubikey/piv/: keytype.rs  management.rs  mod.rs  ssh.rs
tests/: allowed-signer.rs  allowed-signers.rs  cert-conformance.rs  cert-creation-parse-rsa.rs  cert-creation-parse.rs  cert-creation.rs  cert-ecdsa.rs  cert-ed25519.rs  cert-offensive.rs  cert-options.rs  cert-rsa.rs  cert-sk-ecdsa.rs  cert-sk-ed25519.rs  cert.rs  fido-lite.rs  privkey.rs  privkey_encrypted.rs  pubkey.rs  reader.rs  signature-bad.rs  signature-creation-rsa.rs  signature-creation.rs  signature.rs  sk-privkey.rs  sk-pubkey.rs  writer.rs  yubikey-lite.rs
tests/allowed_signers/: good_allowed_signers  test_keys
tests/certs/: ecdsa384_signed_by_ecdsa384-cert.pub  ed25519_signed_by_ecdsa_sk-cert.pub  ed25519_signed_by_ed25519-cert.pub  ed25519_sk_signed_by_ecdsa384-cert.pub  ed25519_sk_signed_by_ed25519_sk-cert.pub
tests/keys/: sk_ecdsa.pub  sk_ed25519-cert.pub
tests/keys/public/: k1.pub  k2.pub  rsa-sha2-256-4096.pub  rsa-sha2-512-4096.pub  rsa-sha2-512-8192.pub  test.pub
tests/keys/sk/: ecdsa  ed25519  ed25519.pub  no_comment_ed25519
tests/keys/unencrypted/: ecdsa_256_1  ecdsa_384_1  ed25519_1  ed25519_2  rsa-2048  rsa-sha2-256-4096  rsa-sha2-512-4096  rsa-sha2-512-8192  rsa_2048_1
tests/signatures/: ecdsa_256_1_Test.sig  ecdsa_384_1_Test.sig  ed25519_1_Test.sig  ed25519_2_Test.sig  rsa-sha2-256-4096_Test.sig  rsa-sha2-512-4096_Test.sig  rsa-sha2-512-8192_Test.sig  rsa_2048_1_Test.sig  sk_ecdsa_Test.sig  sk_ed25519_Test.sig
tests/signatures_bad/: ecdsa_256_1_bitflip_Test.sig  ed25519_1_empty-namespace_Test.sig
