[package]
name = "sshcerts"
version = "0.7.0"
authors = ["Mitchell Grenier <mitchell@confurious.io>"]
edition = "2018"
license-file = "LICENSE"
description = "A library for parsing, verifying, and creating SSH Certificates"
repository = "https://github.com/obelisk/sshcerts"
homepage = "https://github.com/obelisk/sshcerts"
keywords = ["ssh", "yubikey", "certs", "certificates"]
categories = ["authentication"]

[features]
default = ["rsa-signing"]

all = ["encrypted-keys", "rsa-signing", "yubikey_support"]

yubikey_support = ["der-parser", "log", "rcgen", "x509", "x509-parser", "yubikey"]
rsa-signing = ["simple_asn1", "num-bigint"]
encrypted-keys = ["aes", "bcrypt-pbkdf", "ctr"]

[dependencies]
base64 = "0.13"
ring = "0.16"
hex = "*"

# Dependencies for rsa-signing
simple_asn1 = {version = "0.5", optional = true}
num-bigint = {version = "0.4", optional = true}

# Dependencies for yubikey_support
log = {version = "0.4", optional = true}
yubikey = {version = "0.5", features = ["untested"], optional = true}
#yubikey = {path = "../yubikey.rs", features = ["untested"], optional = true}
lexical-core = {version = ">0.7.4", optional = true}
rcgen = {version = "0.8", optional = true}
x509 = {version = "0.2", optional = true}
x509-parser = {version = "0.11", features = ["verify"], optional = true}
der-parser = {version = "5", optional = true}

# Dependencies for encrypted keys
aes = {version = "0.7", features = ["ctr"], optional = true}
bcrypt-pbkdf = {version = "0.6", optional = true}
ctr = {version = "0.8", optional = true}

[dev-dependencies]
env_logger = "0.8.2"
hex = "0.4.2"
clap = "3.0.5"
criterion = "0.3"

[[bench]]
name = "certs_per_second"
harness = false
required-features = ["yubikey_support"]

[[example]]
name = "yk-fingerprint"
required-features = ["yubikey_support"]

[[example]]
name = "yk-provision"
required-features = ["yubikey_support"]

[[example]]
name = "ssh-pkey-info"
required-features = ["encrypted-keys"]

[[test]]
name = "privkey-encrypted"
path = "tests/privkey_encrypted.rs"
required-features = ["encrypted-keys"]